--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 <section class="about">
 
    <div class="image">
-      <img src="images/about-img.jpg" alt="">
+      <img src="about-img.jpg" alt="">
    </div>
 
    <div class="content">
@@ -94,7 +94,7 @@
             <p></p>
             <h3>Niang Design</h3>
             <span>traveler</span>
-            <img src="images/Dernier logo.jpg" alt="">
+            <img src="Dernier logo.jpg" alt="">
          </div>
 
          <div class="swiper-slide slide">
@@ -145,7 +145,7 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus facilis laudantium magnam saepe magni ullam possimus laborum voluptas, veniam ipsum officiis quae doloribus minima ut quis. Molestiae qui distinctio possimus?</p>
             <h3>john deo</h3>
             <span>traveler</span>
-            <img src="images/pic-5.png" alt="">
+            <img src="pic-5.png" alt="">
          </div>
 
          <div class="swiper-slide slide">
