--- a/package.html
+++ b/package.html
@@ -51,7 +51,7 @@
 
       <div class="box">
          <div class="image">
-            <img src="images/img-9.jpg" alt="">
+            <img src="img-9.jpg" alt="">
          </div>
          <div class="content">
             <h3> Allez Youppiii</h3>
@@ -62,7 +62,7 @@
 
       <div class="box">
          <div class="image">
-            <img src="images/img-12.jpg" alt="">
+            <img src="img-12.jpg" alt="">
          </div>
          <div class="content">
             <h3>Allez Youppiii</h3>
@@ -73,7 +73,7 @@
 
       <div class="box">
          <div class="image">
-            <img src="images/img-8.jpg" alt="">
+            <img src="img-8.jpg" alt="">
          </div>
          <div class="content">
             <h3>Allez Youppiii</h3>
@@ -84,7 +84,7 @@
 
       <div class="box">
          <div class="image">
-            <img src="images/img-4.jpg" alt="">
+            <img src="img-4.jpg" alt="">
          </div>
          <div class="content">
             <h3>Allez Youppiii</h3>
@@ -95,7 +95,7 @@
 
       <div class="box">
          <div class="image">
-            <img src="images/img-5.jpg" alt="">
+            <img src="img-5.jpg" alt="">
          </div>
          <div class="content">
             <h3>Allez Youppiii</h3>
@@ -106,7 +106,7 @@
 
       <div class="box">
          <div class="image">
-            <img src="images/img-6.jpg" alt="">
+            <img src="img-6.jpg" alt="">
          </div>
          <div class="content">
             <h3>Allez Youppiii</h3>
@@ -117,7 +117,7 @@
 
       <div class="box">
          <div class="image">
-            <img src="images/img-7.jpg" alt="">
+            <img src="img-7.jpg" alt="">
          </div>
          <div class="content">
             <h3>Allez Youppiii</h3>
@@ -128,7 +128,7 @@
 
       <div class="box">
          <div class="image">
-            <img src="images/img-8.jpg" alt="">
+            <img src="img-8.jpg" alt="">
          </div>
          <div class="content">
             <h3>Allez Youppiii</h3>
@@ -139,7 +139,7 @@
 
       <div class="box">
          <div class="image">
-            <img src="images/img-9.jpg" alt="">
+            <img src="img-9.jpg" alt="">
          </div>
          <div class="content">
             <h3>Allez Youppiii</h3>
@@ -150,7 +150,7 @@
 
       <div class="box">
          <div class="image">
-            <img src="images/img-10.jpg" alt="">
+            <img src="img-10.jpg" alt="">
          </div>
          <div class="content">
             <h3>Allez Youppiii</h3>
@@ -161,7 +161,7 @@
 
       <div class="box">
          <div class="image">
-            <img src="images/img-11.jpg" alt="">
+            <img src="img-11.jpg" alt="">
          </div>
          <div class="content">
             <h3>Allez Youppiii</h3>
@@ -172,7 +172,7 @@
 
       <div class="box">
          <div class="image">
-            <img src="images/img-12.jpg" alt="">
+            <img src="img-12.jpg" alt="">
          </div>
          <div class="content">
             <h3>Allez Youppiii</h3>
